// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for isOpen: false, isPrimary: true, isSecondaryScrollerVisible: true and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: hidden;
    transition: visibility 0s linear var(--p-transition-duration, 0.4s), overlay var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1) allow-discrete, background var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1), -webkit-backdrop-filter var(--p-transition-duration, 0.4s) cubic-bezier(0.4,0,0.5,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 0;
    transform: translate3d(-100%,0,0);
    transition: opacity var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1), transform var(--p-transition-duration, 0.25s) cubic-bezier(0.4,0,0.5,1);
  }
  .drawer:dir(rtl) {
    transform: translate3d(100%,0,0);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,#FFF 0%,#FFF 50%,#EEEFF2 50%,#EEEFF2 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,#EEEFF2 0%,#EEEFF2 50%,#FFF 50%,#FFF 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #EEEFF2;
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, isPrimary: false, isSecondaryScrollerVisible: false and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(1, 2, 5, 0.67);
    transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(16px, 1.25vw + 12px, 36px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

@media(max-width:759px) {
    slot {
      display: flex;
      z-index: 0;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 4/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(1, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #EEEFF2;
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .scroller::before {
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      z-index: 1;
      background: linear-gradient(180deg,#FFF 0%,#FFF 65%,transparent 100%);
    }
    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, isPrimary: false, isSecondaryScrollerVisible: true and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(1, 2, 5, 0.67);
    transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(16px, 1.25vw + 12px, 36px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
    }
    ::slotted(*:not([primary],[cascade])) {
      display: none;
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,#FFF 0%,#FFF 50%,#EEEFF2 50%,#EEEFF2 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,#EEEFF2 0%,#EEEFF2 50%,#FFF 50%,#FFF 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #EEEFF2;
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, isPrimary: true, isSecondaryScrollerVisible: false and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(1, 2, 5, 0.67);
    transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: flex;
      z-index: 0;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 4/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-mobile var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: clamp(338px, 210px + 18vw, 640px);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(1, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #EEEFF2;
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/-1;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .scroller::before {
      content: "";
      position: sticky;
      top: 0;
      grid-area: 1/1/4/-1;
      z-index: 1;
      background: linear-gradient(180deg,#FFF 0%,#FFF 65%,transparent 100%);
    }
    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, isPrimary: true, isSecondaryScrollerVisible: true and theme: auto 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(1, 2, 5, 0.67);
    transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none;
    }
}

@media (prefers-color-scheme: dark) {
    dialog {
      background: rgba(38, 38, 41, 0.67);
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,#FFF 0%,#FFF 50%,#EEEFF2 50%,#EEEFF2 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,#EEEFF2 0%,#EEEFF2 50%,#FFF 50%,#FFF 100%);
    }
@media (prefers-color-scheme: dark) {
      .drawer {
        background: linear-gradient(90deg,#0E0E12 0%,#0E0E12 50%,#212225 50%,#212225 100%);
      }
      .drawer:dir(rtl) {
        background: linear-gradient(90deg,#212225 0%,#212225 50%,#0E0E12 50%,#0E0E12 100%);
      }
}

    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #EEEFF2;
    }
@media (prefers-color-scheme: dark) {
      .drawer::after {
        background: #212225;
      }
}

    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #FFF;
    }
@media (prefers-color-scheme: dark) {
      .drawer::before {
        background: #0E0E12;
      }
}

    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #FFF;
    }
@media (prefers-color-scheme: dark) {
      .drawer {
        background: #0E0E12;
      }
}

    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
@media (prefers-color-scheme: dark) {
      .drawer::after {
        background: #0E0E12;
      }
}

    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
@media (prefers-color-scheme: dark) {
      .drawer::before {
        background: #0E0E12;
      }
}

    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}

@media (prefers-color-scheme: dark) {
    .scroller {
      background: rgba(0,0,0,.01);
    }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, isPrimary: true, isSecondaryScrollerVisible: true and theme: dark 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(38, 38, 41, 0.67);
    transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(0,0,0,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,#0E0E12 0%,#0E0E12 50%,#212225 50%,#212225 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,#212225 0%,#212225 50%,#0E0E12 50%,#0E0E12 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #212225;
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #0E0E12;
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #0E0E12;
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #0E0E12;
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #0E0E12;
    }
    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;

exports[`getComponentCss() should return correct css for isOpen: true, isPrimary: true, isSecondaryScrollerVisible: true and theme: light 1`] = `
"@keyframes slide-up-mobile {
  from {
    transform: translate3d(0,clamp(16px, 1.25vw + 12px, 36px),0);
  }
  to {
    transform: translate3d(0,0,0);
  }
}
@keyframes slide-up-desktop {
  from {
    margin-block-start: clamp(16px, 1.25vw + 12px, 36px);
  }
  to {
    margin-block-start: 0px;
  }
}
  :host {
    display: block;
    color-scheme: light dark !important;
  }
  :host([hidden]) {
    display: none !important;
  }
  :not(:defined,[data-ssr]) {
    visibility: hidden;
  }
  dialog {
    all: unset;
    position: fixed;
    inset: 0;
    z-index: 999999999;
    outline: 0;
    visibility: inherit;
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(1, 2, 5, 0.67);
    transition: background var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1), -webkit-backdrop-filter var(--p-transition-duration, 0.6s) cubic-bezier(0,0,0.2,1);
  }
  dialog::backdrop {
    display: none;
  }
@media(min-width:760px) {
    slot {
      display: flex;
      flex-direction: column;
      gap: clamp(4px, 0.25vw + 3px, 8px);
      grid-area: 2/2/auto/-2;
      height: fit-content;
      padding-block-end: clamp(32px, 2.75vw + 23px, 76px);
      animation: slide-up-desktop var(--p-animation-duration, 0.4s) cubic-bezier(0.25,0.1,0.25,1);
    }
}

@media(max-width:759px) {
    slot {
      display: contents;
    }
    ::slotted(*:not([primary],[secondary],[cascade])) {
      display: none;
    }
}

  .drawer {
    position: absolute;
    inset: 0;
    display: grid;
    opacity: 1;
    transform: translate3d(0,0,0);
    transition: opacity var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1), transform var(--p-transition-duration, 0.4s) cubic-bezier(0,0,0.2,1);
  }
  .drawer::before, .drawer::after {
    content: "";
    position: relative;
    z-index: 2;
    pointer-events: none;
    opacity: 0;
  }
  .scroller {
    display: contents;
    overflow: hidden auto;
    background: rgba(255,255,255,.01);
  }
  .back {
    display: none;
  }
@media(min-width:760px) {
    .drawer {
      width: calc(clamp(338px, 210px + 18vw, 640px) * 2);
      grid-template: clamp(16px, 1.25vw + 12px, 36px) minmax(0, 1fr)/repeat(2, clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr) clamp(32px, 2.75vw + 23px, 76px));
      background: linear-gradient(90deg,#FFF 0%,#FFF 50%,#EEEFF2 50%,#EEEFF2 100%);
    }
    .drawer:dir(rtl) {
      background: linear-gradient(90deg,#EEEFF2 0%,#EEEFF2 50%,#FFF 50%,#FFF 100%);
    }
    .drawer::after {
      grid-area: 1/4/-1/-1;
      background: #EEEFF2;
    }
    .drawer::before {
      grid-area: 1/1/-1/4;
      background: #FFF;
    }
    .scroller {
      grid-area: 1/1/-1/4;
      display: grid;
      grid-template-rows: subgrid;
      grid-template-columns: subgrid;
    }
    .dismiss-mobile {
      display: none;
    }
    .dismiss-desktop {
      --p-internal-icon-filter: invert(1);
      position: absolute;
      inset-inline-start: calc(100% + clamp(8px, 0.5vw + 6px, 16px));
      inset-block-start: clamp(8px, 0.5vw + 6px, 16px);
      padding: 8px;
    }
}

@media(max-width:759px) {
    .drawer {
      grid-template: clamp(16px, 1.25vw + 12px, 36px) auto clamp(32px, 2.75vw + 23px, 76px) minmax(0, 1fr)/clamp(32px, 2.75vw + 23px, 76px) auto minmax(0, 1fr) auto clamp(32px, 2.75vw + 23px, 76px);
      background: #FFF;
    }
    .drawer::after {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .drawer::before {
      grid-area: 1/1/-1/-1;
      background: #FFF;
    }
    .dismiss-mobile {
      --p-internal-button-scaling: 0;
      width: fit-content;
      height: fit-content;
      place-self: center flex-end;
      grid-area: 2/4;
      z-index: 3;
      margin-inline-end: -1px;
    }
    .dismiss-desktop {
      display: none;
    }
    .back {
      display: block;
      grid-area: 2/2;
      width: fit-content;
      height: fit-content;
      place-self: center flex-start;
      z-index: 2;
    }
}
"
`;
